adding a few starting packages

--- a/recipe.yml
+++ b/recipe.yml
@@ -15,18 +15,18 @@ modules:
 
 # Put your custom actions behind this comment
 
-- name: add-just
-  type: shell
-  commands:
-    - "wget -qO - 'https://proget.makedeb.org/debian-feeds/prebuilt-mpr.pub' | gpg --dearmor | sudo tee /usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg 1> /dev/null"
-    - "echo "deb [arch=all,$(dpkg --print-architecture) signed-by=/usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg] https://proget.makedeb.org prebuilt-mpr $(lsb_release -cs)" | sudo tee /etc/apt/sources.list.d/prebuilt-mpr.list"
-    - "apt update"
+# - name: add-just
+#   type: shell
+#   commands:
+#     - "wget -qO - 'https://proget.makedeb.org/debian-feeds/prebuilt-mpr.pub' | gpg --dearmor | sudo tee /usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg 1> /dev/null"
+#     - "echo "deb [arch=all,$(dpkg --print-architecture) signed-by=/usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg] https://proget.makedeb.org prebuilt-mpr $(lsb_release -cs)" | sudo tee /etc/apt/sources.list.d/prebuilt-mpr.list"
+#     - "apt update"
 
-- name: add-ubuntu-repos
-  type: shell
-  commands:
-    - "apt-add-repository ppa:fish-shell/release-3"
-    - "apt-get update && apt-get upgrade"
+# - name: add-ubuntu-repos
+#   type: shell
+#   commands:
+#     - "apt-add-repository ppa:fish-shell/release-3"
+#     - "apt-get update && apt-get upgrade"
 
 
 - name: example-packages
@@ -34,8 +34,8 @@ modules:
   source:
     packages:
     - vim
-    - fish
-    - just
+    # - fish
+    # - just
 
 - name: example-commands
   type: shell
