--- a/recipe.yml
+++ b/recipe.yml
@@ -22,11 +22,11 @@ modules:
 #     - "echo "deb [arch=all,$(dpkg --print-architecture) signed-by=/usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg] https://proget.makedeb.org prebuilt-mpr $(lsb_release -cs)" | sudo tee /etc/apt/sources.list.d/prebuilt-mpr.list"
 #     - "apt update"
 
-# - name: add-ubuntu-repos
-#   type: shell
-#   commands:
-#     - "apt-add-repository ppa:fish-shell/release-3"
-#     - "apt-get update && apt-get upgrade"
+- name: add-ubuntu-repos
+  type: shell
+  commands:
+    - "apt-add-repository ppa:fish-shell/release-3"
+    - "apt-get update && apt-get upgrade"
 
 
 - name: example-packages
@@ -34,7 +34,7 @@ modules:
   source:
     packages:
     - vim
-    # - fish
+    - fish
     # - just
 
 - name: example-commands
